--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <span>Infantil</span>
         <span>SNKRS</span>
       </div>
-      <div>
+      <div class="searchbar">
+        <button>
+          <img src="/icons/search.png" alt="">
+        </button>
         <input type="text" placeholder="Buscar">
       </div>
     </div>
