--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="searchbar">
         <button>
-          <img src="/icons/search.png" alt="">
+          <img src="icons/search.png" alt="">
         </button>
         <input type="text" placeholder="Buscar">
       </div>
