--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <p>Corrida</p>
       <div>
-        <video src="img/2.mp4"></video>
+        <video autoplay loop muted src="img/2.mp4"></video>
       </div>
       <div>
         <img src="img/tout-copy-invincible-3-desk-v2.avif" alt="">
